--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
                         <img src="handpink.png"></div> 
                     <div class="r"> 
                         <div class ="block"></div>
-                        <img src="noise_graph.JPG"> </div> 
+                        <img src="noise_graph.jpg"> </div> 
             </div>
             <div class="c"id="c2"> 
                     <div class="r">
                         <div class ="block"></div>
-                        <img src="marks3 a3 300.JPG"></div> 
+                        <img src="marks3 a3 300.jpg"></div> 
                     <div class="r">
                         <div class ="block"></div> 
-                        <img src="faceframe.JPG"> </div>
+                        <img src="faceframe.jpg"> </div>
             </div>
             <div class="c" id="c3"> 
                  <div class="r">
                     <div class ="block"></div>
-                   <img src="trix11 300 a5.JPG"> </div>
+                   <img src="trix11 300 a5.jpg"> </div>
                 <div class="r"> 
-                    <div class ="block"><img src="face6.JPG"></div> 
+                    <div class ="block"><img src="face6.jpg"></div> 
                 </div>
             </div>
 
