--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
                 
                 <div class = "menu">
                     <table  class ="menu-table">
-                        <tr class="menu-button"><td>Menu<td></tr>
+                        <tr class="menu-button"><td>---<td></tr>
                         <tr class ="drop"><td class ="drop1"><a href="index.html">Home<td></tr>
                         <tr class ="drop" ><td class ="drop2"><a href="about.html">About</a><td></tr>
                         <tr class ="drop"><td class ="drop3"><a href="contact.html">Contact<td></tr>
