--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <div class = "banner">
             <div class = "banner-container">
-                <div class = "logo">   </div>
+                <div class = "logo"> IVY  </div>
                 
                 <div class = "menu">
                     <table  class ="menu-table">
