header and footer

--- a/about.html
+++ b/about.html
@@ -18,16 +18,20 @@
                         <tr class="menu-button"><td>---<td></tr>
                         <tr class ="drop"><td class ="drop1"><a href="index.html">Home<td></tr>
                         <tr class ="drop" ><td class ="drop2"><a href="about.html">About</a><td></tr>
-                        <tr class ="drop"><td class ="drop3"><a href="contact.html">Contact<td></tr>
+                        <tr class ="drop"><td class ="drop3"><a href="contact.html">Projects<td></tr>
                     </table>
                 </div>
             </div>
         </div>
         <div class=" content">
             <div class="photo-wrap">
-
            <img src="IMG_6792.JPG">
-            </div>       
+            </div>     
+            <div class=" text-wrap">
+                This is where i'll write something later on, maybe not. 
+                <br>
+                Contact me <u>here</u>
+            </div>  
         </div>
     
     </div>
