--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
     <link type="text/css" rel="stylesheet" href="index.style.css">
-    <link type="text/css" rel="stylesheet" href="about.css">  
+    <link type="text/css" rel="stylesheet" href="contact.css">  
         <title>IVY</title>
     <script src="jquery-3.4.1.min.js"></script>
     <script src="index.js"></script>
@@ -18,19 +18,30 @@
                         <tr class="menu-button"><td>---<td></tr>
                         <tr class ="drop"><td class ="drop1"><a href="index.html">Home<td></tr>
                         <tr class ="drop" ><td class ="drop2"><a href="about.html">About</a><td></tr>
-                        <tr class ="drop"><td class ="drop3"><a href="contact.html">Contact<td></tr>
+                        <tr class ="drop"><td class ="drop3"><a href="contact.html">Projects<td></tr>
                     </table>
                 </div>
             </div>
         </div>
         <div class=" content">
-            <div class="photo-wrap">
-                <p> please don't </p>
-
-           
-            </div>       
+                    <div class="c" id="c1"> 
+                    <div class="r">
+                        <div class ="block2"><a href ="indexhalf/indexhalf.html" target="_blank" class="project-name">Game Face</a></div>
+                    </div> 
+                    </div>
+            <div class="c"id="c2"> 
+                    <div class="r">
+                        <div class ="block2"><a href=""class="project-name">Stim</a></div>
+                    </div> 
+            </div>
+            <div class="c" id="c3"> 
+                 <div class="r">
+                    <div class ="block2"><a href="" class="project-name"> Another</a></div>
+                </div> 
+                </div>
         </div>
-    
+
+     <div class = "footer"></div>
     </div>
  </body>
  </html>
