--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <tr class="menu-button"><td>---<td></tr>
                         <tr class ="drop"><td class ="drop1"><a href="index.html">Home<td></tr>
                         <tr class ="drop" ><td class ="drop2"><a href="about.html">About</a><td></tr>
-                        <tr class ="drop"><td class ="drop3"><a href="contact.html">Contact<td></tr>
+                        <tr class ="drop"><td class ="drop3"><a href="contact.html">Projects<td></tr>
                     </table>
                 </div>
             </div>
@@ -49,7 +49,10 @@
             </div>
 
         </div>
+
+    <div class = "footer"></div>
+ </div>   
     
-    </div>
+ 
  </body>
  </html>
